# pyqmh-tools

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml  python-package.yml
src/pyqmh_tools/: __init__.py  pyqmh_module_add.py  pyqmh_module_remove.py  pyqmh_project_init.py
src/pyqmh_tools/assets/: new-.gitignore  new-app-flask.py  new-app-www.py  new-app.py  new-base.py  new-factory.py  new-implementation.py  new-init.py  new-module-app-factory.py  new-module-app-flask-factory.py  new-module-app-flask.py  new-module-app-www.py  new-module-app.py  new-module.py  new-simulated.py
src/pyqmh_tools/assets/www-app/static/css/: main.css
src/pyqmh_tools/assets/www-app/static/js/: theme.js
src/pyqmh_tools/assets/www-app/templates/: about.html  base.html  index.html  module_page.html
src/pyqmh_tools/assets/www-module/static/css/: hello_world.css
src/pyqmh_tools/assets/www-module/static/js/: theme.js
src/pyqmh_tools/assets/www-module/templates/: about.html  base.html  index.html
tests/: test_module_add.py  test_module_remove.py  test_project_init.py
